# transcription-quality

./: .env.example  .gitignore  README.md  analyzer.py  methodology.md  metrics_evaluation.py  pyproject.toml  utils.py
texts/: latency.json  transcript1.txt  transcript2.txt  transcript3.txt
texts/gt/: transcript_gt.txt
