[tool.poetry]
name = "transcription-quality"
version = "0.1.0"
description = ""
authors = ["sofianeH1 <sofiane.hamiti18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.4"
scipy = "^1.16.2"
scikit-learn = "^1.7.2"
python-levenshtein = "^0.27.1"
jiwer = "^4.0.0"
sentence-transformers = "^5.1.1"
nltk = "^3.9.2"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
